feat: :sparkles: "record" button downloads audio loop
New functions for audio graph building/getting to enable rebuilding graph in offlineContext for rendering.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
+        "abuffer",
         "apipost",
         "bypassable",
+        "FXEQ",
         "HIHAT",
         "Playhead",
         "redoable"
