--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,4 @@ node_modules
 !.env.example
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
-/.idea/.gitignore
-/.idea/git_toolbox_prj.xml
-/.idea/modules.xml
-/.idea/inspectionProfiles/Project_Default.xml
-/.idea/vcs.xml
-/.idea/Waive-Studio.iml
+/.idea/*
